# python-project-template

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
src/example/: __init__.py  calculator.py
tests/: test_calculator.py
